--- a/infra/serverless.yml
+++ b/infra/serverless.yml
@@ -8,7 +8,7 @@ provider:
 
 functions:
   api:
-    handler: ../src/main.handler
+    handler: ../main.handler
     events:
       - httpApi:
           path: /{proxy+}
