fix: github workflow npm -> npx

--- a/infra/Makefile
+++ b/infra/Makefile
@@ -1,13 +1,13 @@
 .PHONY: deploy-dev deploy-prod remove-dev remove-prod
 
 deploy-dev:
-	serverless deploy --stage dev
+	npx serverless deploy --stage dev
 
 deploy-prod:
-	serverless deploy --stage prod
+	npx serverless deploy --stage prod
 
 remove-dev:
-	serverless remove --stage dev
+	npx serverless remove --stage dev
 
 remove-prod:
-	serverless remove --stage prod
+	npx serverless remove --stage prod
