--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Configure Serverless
         run: |
           echo "Serverless 인증 설정 중..."
+          npx serverless config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }} --region ap-northeast-2
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
 
@@ -80,6 +81,8 @@ jobs:
           make deploy-prod
         env:
           VERSION: ${{ steps.version.outputs.version }}
+          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+          SERVERLESS_ORG: ${{ secrets.SERVERLESS_ORG }}
 
       - name: Deployment Success
         run: |
