--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -54,9 +54,11 @@ jobs:
       - name: Configure Serverless
         run: |
           echo "Serverless 인증 설정 중..."
-          npx serverless config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }} --region ap-northeast-2
+          echo "Access Key: ${SERVERLESS_ACCESS_KEY:0:8}..."
+          echo "Organization: $SERVERLESS_ORG"
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+          SERVERLESS_ORG: ${{ secrets.SERVERLESS_ORG }}
 
       - name: Generate version
         id: version
