--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
-          cache-dependency-path: infra/package-lock.json
+          cache-dependency-path: infra/serverless/package-lock.json
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -41,7 +41,7 @@ jobs:
         run: uv sync
 
       - name: Install Serverless dependencies
-        working-directory: infra
+        working-directory: infra/serverless
         run: npm install
 
       - name: Configure AWS credentials
@@ -77,7 +77,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Deploy to Production
-        working-directory: infra
+        working-directory: infra/serverless
         run: |
           echo "프로덕션에 버전 ${{ steps.version.outputs.version }} 배포 중..."
           make deploy-prod
