--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiomysql>=0.2.0",
     "alembic>=1.16.5",
+    "cryptography>=45.0.7",
     "dotenv>=0.9.9",
     "fastapi>=0.116.1",
     "mangum>=0.19.0",
+    "pymysql>=1.1.2",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
 ]
