--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,4 +1,4 @@
-name: Deploy to Production
+name: Production 배포
 
 on:
   pull_request:
@@ -12,80 +12,41 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      actions: read
     
     steps:
-      - name: Checkout code
+      - name: 코드 체크아웃
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: infra/serverless/package-lock.json
-
-      - name: Setup Python
+      - name: Python 설정
         uses: actions/setup-python@v4
         with:
           python-version: '3.12'
 
-      - name: Install UV
+      - name: SAM CLI 설정
+        uses: aws-actions/setup-sam@v2
+
+      - name: UV 설치
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
-      - name: Install Python dependencies
+      - name: Python 의존성 설치
         run: uv sync
 
-      - name: Install Serverless dependencies
-        working-directory: infra/serverless
-        run: npm install
-
-      - name: Configure AWS credentials
+      - name: AWS 자격증명 설정
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
 
-      - name: Configure Serverless
-        run: |
-          echo "Serverless 인증 설정 중..."
-          echo "Access Key: ${SERVERLESS_ACCESS_KEY:0:8}..."
-          echo "Organization: $SERVERLESS_ORG"
-        env:
-          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
-          SERVERLESS_ORG: ${{ secrets.SERVERLESS_ORG }}
+      - name: SAM 빌드
+        working-directory: infra/sam
+        run: sam build --config-env prod
 
-      - name: Generate version
-        id: version
-        run: |
-          VERSION="v$(date +'%Y.%m.%d')-$(git rev-parse --short HEAD)"
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "생성된 버전: $VERSION"
+      - name: 프로덕션 배포
+        working-directory: infra/sam
+        run: sam deploy --config-env prod --no-confirm-changeset --no-fail-on-empty-changeset
 
-      - name: Create Git tag
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git tag -a ${{ steps.version.outputs.version }} -m "Production deployment ${{ steps.version.outputs.version }}"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git ${{ steps.version.outputs.version }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Deploy to Production
-        working-directory: infra/serverless
-        run: |
-          echo "프로덕션에 버전 ${{ steps.version.outputs.version }} 배포 중..."
-          make deploy-prod
-        env:
-          VERSION: ${{ steps.version.outputs.version }}
-          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
-          SERVERLESS_ORG: ${{ secrets.SERVERLESS_ORG }}
-
-      - name: Deployment Success
-        run: |
-          echo "프로덕션 배포가 성공적으로 완료되었습니다! 버전: ${{ steps.version.outputs.version }}"
+      - name: 배포 완료
+        run: echo "✅ 프로덕션 배포가 완료되었습니다!"
