--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,10 @@ dependencies = [
     "cryptography>=45.0.7",
     "dotenv>=0.9.9",
     "fastapi>=0.116.1",
+    "httpx>=0.28.1",
+    "jwt>=1.4.0",
     "mangum>=0.19.0",
+    "pyjwt>=2.10.1",
     "pymysql>=1.1.2",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
