--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "pyjwt>=2.10.1",
     "pymysql>=1.1.2",
     "sqlalchemy>=2.0.43",
+    "sqlmodel>=0.0.24",
     "uvicorn>=0.35.0",
 ]
 
