chore: database infra 초기 세팅

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ SageMath
 # Claude
 .claude
 
+### Terraform ###
+*.tfstate
+*.tfstate.*
+.terraform/
+*.tfvars
+**/*.plan
+
 # Distribution / packaging
 .Python
 build/
