--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "cryptography>=45.0.7",
     "dotenv>=0.9.9",
     "fastapi>=0.116.1",
+    "greenlet>=3.2.4",
     "httpx>=0.28.1",
     "jwt>=1.4.0",
     "mangum>=0.19.0",
