--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "aiomysql>=0.2.0",
     "alembic>=1.16.5",
     "boto3>=1.40.31",
+    "boto3-stubs[s3]>=1.40.31",
     "cryptography>=45.0.7",
     "dotenv>=0.9.9",
     "fastapi>=0.116.1",
