--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
         args: ['--allow-multiple-documents']
-        exclude: 'infra/sam/template.yaml'
+        exclude: 'infra/sam/template.yaml|infra/workers/template.yaml'
 
 -   repo: https://github.com/ambv/black
     rev: 24.3.0
