--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     "greenlet>=3.2.4",
     "httpx>=0.28.1",
     "mangum>=0.19.0",
+    "mypy-boto3-s3>=1.40.26",
     "pyjwt>=2.10.1",
     "pymysql>=1.1.2",
     "python-multipart>=0.0.20",
